@@ -1,4 +1,5 @@
 
+  * Added Magnatune support
   * Added Jamendo support
   * Added network buffer size option in Preferences under Online
 
